# Quarry

./: README.md  io.github.Quarry.json  meson.build
data/: io.github.Quarry.desktop.in  io.github.Quarry.gschema.xml  io.github.Quarry.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  chart.vala  charts.vala  color.vala  crusher.vala  dump-truck.vala  excavator.vala  grid.vala  machine.vala  main.vala  meson.build  point.vala  quarry.gresource.xml  series.vala  station.vala  window.ui  window.vala
